--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: python
 python:
   - "2.7"
   - "3.6"
-install: pip install tox-travis
+install: pip install -r requirements.txt
 script: tox
