Modified files py36

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,7 @@ skipsdist = True
  
 [testenv]
 commands =
-  py.test
+  pytest  {posargs}
 
-#deps =
-#  -rrequirements.txt
-#  pytest
+deps:
+  pytest 
