--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
+sudo: true
 language: python
 python: "3.6"
 install: pip install -r requirements.txt
-script: tox 
+script: tox -- -x testFile.py
+
 
