--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,12 @@ envlist = py36
 skipsdist = True
  
 [testenv]
-commands =
-  pytest  {posargs}
+setenv = PYTHONPATH = ./
 
-deps:
-  pytest 
+deps= -rrequirements.txt
+
+commands =
+  pytest tests/testFile.py
+
+; deps= pytest
+
